--- a/.gitattributes
+++ b/.gitattributes
@@ -1,67 +1,90 @@
-# init
-git lfs install
+## Unity ##
+*.cs diff=csharp text
+*.cginc text
+*.shader text
+*.mat merge=unityyamlmerge eol=lf
+*.anim merge=unityyamlmerge eol=lf
+*.unity merge=unityyamlmerge eol=lf
+*.physicsMaterial2D merge=unityyamlmerge eol=lf
+*.physicsMaterial merge=unityyamlmerge eol=lf
+*.asset merge=unityyamlmerge eol=lf
+*.meta merge=unityyamlmerge eol=lf
+*.controller merge=unityyamlmerge eol=lf
 
-# images
-# https://docs.unity3d.com/Manual/ImportingTextures.html
-git lfs track *.png
-git lfs track *.bmp
-git lfs track *.gif
-git lfs track *.jpg
-git lfs track *.jpeg
-git lfs track *.psd
-git lfs track *.tiff
-git lfs track *.tga
-git lfs track *.iff
-git lfs track *.pict
+## git-lfs ##
+#Image
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.ai filter=lfs diff=lfs merge=lfs -text
+*.bmp filter=lfs diff=lfs merge=lfs -text
+*.tiff filter=lfs diff=lfs merge=lfs -text
+*.iff filter=lfs diff=lfs merge=lfs -text
+*.pict filter=lfs diff=lfs merge=lfs -text
 
-# audio
-# https://docs.unity3d.com/Manual/AudioFiles.html
-git lfs track *.wav
-git lfs track *.mp3
-git lfs track *.ogg
-git lfs track *.aiff
-git lfs track *.aif
-git lfs track *.mod
-git lfs track *.it
-git lfs track *.s3m
-git lfs track *.xm
+#Audio
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
+*.ogg filter=lfs diff=lfs merge=lfs -text
+*.aiff filter=lfs diff=lfs merge=lfs -text
+*.mod filter=lfs diff=lfs merge=lfs -text
+*.it filter=lfs diff=lfs merge=lfs -text
+*.s3m filter=lfs diff=lfs merge=lfs -text
+*.xm filter=lfs diff=lfs merge=lfs -text
+*.aif filter=lfs diff=lfs merge=lfs -text
 
-# movie
-# https://docs.unity3d.com/Manual/class-MovieTexture.html
-git lfs track *.mp4
-git lfs track *.avi
-git lfs track *.mov
-git lfs track *.mpg
-git lfs track *.mpeg
-git lfs track *.asf
+#Video
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
+*.avi filter=lfs diff=lfs merge=lfs -text
+*.mpg filter=lfs diff=lfs merge=lfs -text
+*.mpeg filter=lfs diff=lfs merge=lfs -text
+*.asf filter=lfs diff=lfs merge=lfs -text
 
-# fonts
-# https://docs.unity3d.com/Manual/class-Font.html
-git lfs track *.ttf
-git lfs track *.otf
+#3D Object
+*.FBX filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
+*.dae filter=lfs diff=lfs merge=lfs -text
+*.3ds filter=lfs diff=lfs merge=lfs -text
+*.dxf filter=lfs diff=lfs merge=lfs -text
+*.max filter=lfs diff=lfs merge=lfs -text
+*.ma filter=lfs diff=lfs merge=lfs -text
+*.mb filter=lfs diff=lfs merge=lfs -text
 
-# 3D models
-# https://docs.unity3d.com/Manual/3D-formats.html
-git lfs track *.fbx
-git lfs track *.dae
-git lfs track *.3ds
-git lfs track *.dxf
-git lfs track *.obj
-git lfs track *.max
-git lfs track *.ma
-git lfs track *.mb
+#font
+*.ttf filter=lfs diff=lfs merge=lfs -text
+*.otf filter=lfs diff=lfs merge=lfs -text
 
 # Android
-git lfs track *.a
-git lfs track *.so
+*.a filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
 
 # library
-git lfs track *.dll
+*.dll filter=lfs diff=lfs merge=lfs -text
 
-# archives
-git lfs track *.zip
-git lfs track *.rar
-git lfs track *.tar
-git lfs track *.gz
-git lfs track *.lzh
-git lfs track *.7z
+#ETC
+*.exr filter=lfs diff=lfs merge=lfs -text
+*.tga filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.rns filter=lfs diff=lfs merge=lfs -text
+*.reason filter=lfs diff=lfs merge=lfs -text
+*.lxo filter=lfs diff=lfs merge=lfs -text
+*.rar filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
+*.lzh filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
+
+#
+*.spm filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
+*.tiff filter=lfs diff=lfs merge=lfs -text
+*.unitypackage filter=lfs diff=lfs merge=lfs -text
+*.apk filter=lfs diff=lfs merge=lfs -text
+
+LightingData.asset filter=lfs diff=lfs merge=lfs -text
